cabal-version:      2.4
name:               wl-pprint-text
version:            1.2.0.2
synopsis:           A Wadler/Leijen Pretty Printer for Text values
description:        A clone of wl-pprint for use with the text library.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ivan Lazar Miljenovic
maintainer:         Ivan.Miljenovic@gmail.com
copyright:          2007 Daan Leijen, 2010 Ivan Lazar Miljenovic
category:           Text
build-type:         Simple
tested-with:
  GHC ==7.4.2
   || ==7.6.3
   || ==7.8.4
   || ==7.10.3
   || ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.1
   || ==9.2.1

extra-source-files:
  Changelog.md
  README.md

library
  hs-source-dirs:   src
  exposed-modules:
    Text.PrettyPrint.Leijen.Text
    Text.PrettyPrint.Leijen.Text.Monadic

  build-depends:
      base         >=4.5.0.0  && <5
    , base-compat  >=0.10     && <0.13
    , text         >=0.11.0.0 && <2.1

  default-language: Haskell98
  ghc-options:      -Wall
